--- a/templates/base.html
+++ b/templates/base.html
@@ -6,8 +6,11 @@
 
 <h1>Welcome to shwop.it!</h1>
 
-{% block content %}
+<p>
+    <img src="media/Reccomend.jpg">
+</p>
 
+{% block content %}
 {% endblock %}
 
 </body>
