ADD User functionality - Now user is instantly created when they provide email

--- a/Shwopper/templates/Shwopper/index.html
+++ b/Shwopper/templates/Shwopper/index.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "Shwopper/base.html" %}
 
 {% block content %}
 {% for field, errors in shwopFiorm.errors.items %}
