--- a/Shwopper/templates/Shwopper/shwopLinkSuccess.html
+++ b/Shwopper/templates/Shwopper/shwopLinkSuccess.html
@@ -1,15 +1,15 @@
-{% extends base.html %}
+{% extends "base.html" %}
 
 {% block content %}
     {% if affiLink %}
         <h1>Your link has been successfully converted into affiliate!</h1>
     {% else %}
-        <h1>Your link has been shortened successfuly!</h1>
+        <h1>Your link has been shortened successfully!</h1>
     {% endif %}
 
     <h2>Your link is: </h2>
     <a href="/{{ shwopCode }}">
-        http://127.0.0.1:8000/{{ shwopCode }}
+        http://shwop.it/{{ shwopCode }}
     </a>
     {% if currUser %}
         {% if user.is_authenticated %}
@@ -21,7 +21,7 @@
     {% else %}
         {% if userCreated %}
             <h2>Congratulations! We have sent you an email address with your password!</h2>
-            <a href="/accounts/signin">Click here to get started earning!</a>
+            <a href="/accounts/signin">Click here to get started!</a>
         {% endif %}
     {% endif %}
 {% endblock %}
