--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,10 @@
 
 <html lang="en">
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <link rel="stylesheet" type="text/css" href="/media/css/basestyle.css">
+    <link rel="stylesheet" type="text/css" href="/media/css/button.css">
+    {% block links %} {% endblock %}
   <title>{% block title %} Shwop.It {% endblock %}</title>
   {% block meta %}{% endblock %}
 </head>
@@ -11,32 +14,46 @@
     {% block alertMessage %}
         <!--div id="alertMessage"> This message will contain an alertMessage if present </div>-->
     {% endblock %}
-  <div id="header">
-      <div id="title">
-          <h1>Welcome to shwop.it!</h1>
-      </div>
-      <div id="usersection">
-          {% if user.is_authenticated %}
-                <a href="/accounts/{{ user.get_username }}">My account</a>
-                <br>
-                <a href="/accounts/signout">Sign Out</a>
-          {% else %}
-                <a href="/accounts/signin">Log in</a>
-          {% endif %}
-      </div>
-  <div id="wrapper">
-      <p>
-          <img src="/media/Reccomend.jpg">
-      </p>
-  </div>
-    {% block body %}
-      <div class="content_title">
-        {% block content_title %}{% endblock %}
-      </div>
-      <div class="content">
-        {% block content %}{% endblock %}
-      </div>
+
+    {% block head %}
+    <div id="header">
+        <div id=logo>
+            <a href="/">
+                <img src="/media/images/baseimg/shwopitlogo.png" id="logoimg"/>
+            </a>
+        </div>
+        <div id="pagelinks">
+            <!--
+                <a href="" onClick="smoothScroll('header');return false;">Home</a>
+                <a href="" onClick="smoothScroll('maincontent');return false;">About</a> -->
+        </div>
+        <div id="usersection">
+            {% if user.is_authenticated %}
+                <a class="simplebutton" href="/accounts/{{ user.get_username }}">My account</a>
+                Hello {{ user.get_username }}!
+                <a class="simplebutton" href="/accounts/signout">Sign Out</a>
+            {% else %}
+                <a class="simplebutton" href="/accounts/signin">Log in</a>
+                <a class="simplebutton" href="/accounts/signup">Sign up</a>
+            {% endif %}
+        </div>
+        <a id="twitterlink" href="https://twitter.com/ShopMyBlog">
+            <img src="/media/images/baseimg/twittericon.png" border="0"/>
+        </a>
+    </div>
     {% endblock %}
-  </div>
+
+    <div id="wrapper" style="margin-top:3%; height: 100%; width: 80%">
+
+        <div id="logoimage" style="margin-top: 130px">
+            <img src="/media/images/baseimg/shwopit.png">
+            <br><br>
+        </div>
+
+        {% block content %}
+            <div id="maincontent" style="background-color:#ffffff; padding-top:30px; ">
+            </div>
+        {% endblock %}
+    </div>
 </body>
 </html>
